--- a/OysterCard/OysterCard.Website/Views/Home/Index.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
+﻿@model OysterCard.Core.DTO.UserDTO
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    @if (Model != null)
+    {
+        <h1 class="display-4">Welcome @Model.Forename</h1>
+    }
+    else
+    {
+        <h1 class="display-4">Welcome</h1>
+    }
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
