--- a/OysterCard/OysterCard.Website/Views/Shared/_Layout.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_Layout.cshtml
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header class="mb-4">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
                 <div class="brand">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
