--- a/OysterCard/OysterCard.Website/Views/Shared/_Layout.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - Oyster - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            @DateTime.Now.Year &copy; Oyster - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
