--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Login.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,44 +2,36 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Log in";
 }
 
-<div align="center" style="margin-top: 50px">
-    <div class="card" style="width: 40%;min-width: 300px;" align="justify">
-        <div class="card-header">Login</div>
+<h1>@ViewData["Title"]</h1>
+<hr />
+<div align="center" class="p-3">
+    <div class="card" style="width: 30%;min-width: 275px;" align="justify">
         <div class="card-body">
             <form id="account" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
+                    <label asp-for="UserLoginVm.Email"></label>
                     <input asp-for="UserLoginVm.Email" class="form-control" />
                     <span asp-validation-for="UserLoginVm.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="UserLoginVm.Password"></label>
                     <input asp-for="UserLoginVm.Password" class="form-control" />
                     <span asp-validation-for="UserLoginVm.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="UserLoginVm.RememberMe">
-                            <input asp-for="UserLoginVm.RememberMe" />
-                            @Html.DisplayNameFor(m => m.UserLoginVm.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
                     <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register</a>
-                    </p>
                 </div>
             </form>
         </div>
+    </div>
+    <div class="p-3">
+        <p>
+            <a asp-page="./Signup" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a>
+        </p>
     </div>
 </div>
 
