--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
@@ -5,9 +5,10 @@
     ViewData["Title"] = "Sign up";
 }
 
-<div align="center" style="margin-top: 50px">
-    <div class="card" style="width: 40%;min-width: 300px;" align="justify">
-        <div class="card-header">Sign up</div>
+<h1>@ViewData["Title"]</h1>
+<hr />
+<div align="center" class="p-3">
+    <div class="card" style="width: 30%;min-width: 275px;" align="justify">
         <div class="card-body">
             <div class="card-title">
                 All fields are required.
@@ -16,23 +17,27 @@
             <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
+                    <label asp-for="UserSignupVm.Forename"></label>
                     <input asp-for="UserSignupVm.Forename" class="form-control" />
                     <span asp-validation-for="UserSignupVm.Forename" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="UserSignupVm.Surname"></label>
                     <input asp-for="UserSignupVm.Surname" class="form-control" />
                     <span asp-validation-for="UserSignupVm.Surname" class="text-danger"></span>
                 </div>
-                <br />
                 <div class="form-group">
+                    <label asp-for="UserSignupVm.Email"></label>
                     <input asp-for="UserSignupVm.Email" class="form-control" />
                     <span asp-validation-for="UserSignupVm.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="UserSignupVm.Password"></label>
                     <input asp-for="UserSignupVm.Password" class="form-control" />
                     <span asp-validation-for="UserSignupVm.Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="UserSignupVm.ConfirmPassword"></label>
                     <input asp-for="UserSignupVm.ConfirmPassword" class="form-control" />
                     <span asp-validation-for="UserSignupVm.ConfirmPassword" class="text-danger"></span>
                 </div>
