Update to log out button.

--- a/OysterCard/OysterCard.Website/Views/Shared/_LoginPartial.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_LoginPartial.cshtml
@@ -14,8 +14,9 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a class="dropdown-item" href="#">Settings</a>
                 <div class="dropdown-divider"></div>
+                <a></a>
                 <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="dropdown-item">Log out</button>
+                    <button type="submit" class="dropdown-item btn">Log out</button>
                 </form>
             </div>
         </li>
