Adding content to login home.

--- a/OysterCard/OysterCard.Website/Views/Shared/_OystersPartial.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_OystersPartial.cshtml
@@ -1,4 +1,39 @@
 ﻿@model OysterCard.Core.DTO.UserDTO
 
-<h1 class="display-4">Welcome @Model.Forename</h1>
-<p>You currently have @Model.Oysters.Count() Oysters.</p>
+<h1>Welcome, @Model.Forename</h1>
+<hr />
+@if (@Model.Oysters.Any())
+{
+    <div class="alert alert-info" role="alert">
+        You currently have @Model.Oysters.Count() Oysters.
+    </div>
+}
+else
+{
+    <div class="alert alert-warning text-center" role="alert">
+        <h4 class="alert-heading">You don't have any active Oysters</h4>
+    </div>
+    <div class="card-deck">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+    </div>
+}
