Added transparency on logo.

--- a/OysterCard/OysterCard.Website/Views/Shared/_OystersPartial.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_OystersPartial.cshtml
@@ -11,13 +11,13 @@
 else
 {
     <div class="alert alert-warning text-center" role="alert">
-        <h4 class="alert-heading">You don't have any active Oysters</h4>
+        <h5 class="alert-heading">You don't have any active Oysters</h5>
     </div>
     <div class="card-deck">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Apply for an Oyster</h5>
+                <p class="card-text">By applying for an Oyster,</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
