- Building home page after login. - Update on formatting. - Fixing footer. - Update on logo.

--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Sign up";
 }
 
-<h1>@ViewData["Title"]</h1>
-<hr />
-<div align="center" class="p-3">
-    <div class="card" style="width: 30%;min-width: 275px;" align="justify">
+<div align="center">
+    <h1>@ViewData["Title"]</h1>
+    <br />
+    <div class="card" style="width: 30%; min-width: 275px;" align="justify">
         <div class="card-body">
             <div class="card-title">
                 All fields are required.
