--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Login.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<hr />
-<div align="center" class="p-3">
-    <div class="card" style="width: 30%;min-width: 275px;" align="justify">
+<div align="center">
+    <h1>@ViewData["Title"]</h1>
+    <br />
+    <div class="card" style="width: 30%; min-width: 275px;" align="justify">
         <div class="card-body">
             <form id="account" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
