Adding some more content to the main login page.

--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Login.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Login.cshtml
@@ -28,11 +28,9 @@
             </form>
         </div>
     </div>
-    <div class="p-3">
-        <p>
-            <a asp-page="./Signup" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a>
-        </p>
-    </div>
+    <p class="pt-3">
+        <a asp-page="./Signup" asp-route-returnUrl="@Model.ReturnUrl">Create an account</a>
+    </p>
 </div>
 
 @section Scripts {
