--- a/OysterCard/OysterCard.Website/wwwroot/css/site.css
+++ b/OysterCard/OysterCard.Website/wwwroot/css/site.css
@@ -9,6 +9,10 @@ a.navbar-brand {
 
 /* Sticky footer styles
 -------------------------------------------------- */
+* {
+    font-family: 'Mukta', sans-serif;
+}
+
 html {
     font-size: 14px;
 }
