--- a/OysterCard/OysterCard.Website/Views/Shared/_Layout.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
               crossorigin="anonymous"
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
     </environment>
-
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
 </head>
 <body>
     <header>
