- Removed partial oyster page and added it as the index to the Oyster controller instead. - Some code cleanup.

--- a/OysterCard/OysterCard.Website/Views/Oysters/Index.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model OysterCard.Core.DTO.UserDTO
 
+@{
+    ViewData["Title"] = "Home";
+}
+
 <h1>Welcome, @Model.Forename</h1>
 @if (@Model.Oysters.Any())
 {
