--- a/OysterCard/OysterCard.Website/Views/Oysters/Index.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Home";
 }
 
+<breadcrumb></breadcrumb>
+<hr />
 <h1>Welcome, @Model.Forename</h1>
 @if (@Model.Oysters.Any())
 {
@@ -13,7 +15,7 @@
 }
 else
 {
-    <h5 class="alert border-warning alert-warning text-center" role="alert">You don't have any active Oysters</h5>
+    <h5 class="alert alert-warning text-center" role="alert">You don't have any active Oysters</h5>
     <div class="card-deck">
         <div class="card">
             <div class="card-body">
