--- a/OysterCard/OysterCard.Website/Views/Oysters/Index.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Index.cshtml
@@ -6,7 +6,7 @@
 
 <breadcrumb></breadcrumb>
 <hr />
-<h1>Welcome, @Model.Forename</h1>
+<h1>Welcome</h1>
 @if (@Model.Oysters.Any())
 {
     <div class="alert alert-info" role="alert">
