--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
@@ -2,7 +2,7 @@
 @model SignupModel
 
 @{
-    ViewData["Title"] = "Sign up";
+    ViewData["Title"] = "Create a new account";
 }
 
 <div align="center">
