--- a/OysterCard/OysterCard.Website/Views/Shared/_LoginPartial.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_LoginPartial.cshtml
@@ -15,8 +15,8 @@
                 <a class="dropdown-item" href="#">Settings</a>
                 <div class="dropdown-divider"></div>
                 <a></a>
-                <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="dropdown-item btn">Log out</button>
+                <form asp-area="Identity" asp-page="/Account/Signout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="dropdown-item btn">Sign out</button>
                 </form>
             </div>
         </li>
@@ -24,10 +24,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Signup">Sign up</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Signup">Create a new account</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Log in</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Signin">Sign in</a>
         </li>
     }
 </ul>
