--- a/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
@@ -15,7 +15,7 @@
     You can also travel on most National Rail services in London and some outside London.
 </p>
 <div class="row">
-    <div class="col-md-4">
+    <div class="card col-md-4">
         <form id="oyster-application" asp-controller="Oysters" asp-action="ApplyForOyster" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
