Changed default route when logged in to dashboard.

--- a/OysterCard/OysterCard.Website/Views/Oysters/Dashboard.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<OysterCard.Core.DTO.OysterDTO>
 
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Dashboard";
 }
 
 <breadcrumb></breadcrumb>
