Changed some text in view.

--- a/OysterCard/OysterCard.Website/Views/Oysters/Dashboard.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Dashboard.cshtml
@@ -36,7 +36,7 @@ else
             <a asp-area="" asp-controller="Oysters" asp-action="Apply">
                 <h5 class="card-title">Apply for an Oyster</h5>
             </a>
-            <p class="card-text">Top up, buy travel cards, track journeys and manage your Oyster.</p>
+            <p class="card-text">By applying, you'll be able to top up, buy travel cards, track journeys and manage your Oyster.</p>
         </div>
     </div>
     <div class="card">
