Added date of birth to oyster application page.

--- a/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
@@ -29,6 +29,11 @@
             <span asp-validation-for="@Model.Surname" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="@Model.DateOfBirth"></label>
+            <input asp-for="@Model.DateOfBirth" class="form-control" />
+            <span asp-validation-for="@Model.DateOfBirth" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for="@Model.Address"></label>
             <input asp-for="@Model.Address" class="form-control" />
             <span asp-validation-for="@Model.Address" class="text-danger"></span>
