--- a/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
@@ -16,45 +16,51 @@
 </p>
 <br />
 <div class="card col-md-4">
-    <form id="oyster-application" asp-controller="Oysters" asp-action="ApplyForOyster" method="post">
-        <div asp-validation-summary="All" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="@Model.Forename"></label>
-            <input asp-for="@Model.Forename" class="form-control" />
-            <span asp-validation-for="@Model.Forename" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.Surname"></label>
-            <input asp-for="@Model.Surname" class="form-control" />
-            <span asp-validation-for="@Model.Surname" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.DateOfBirth"></label>
-            <input asp-for="@Model.DateOfBirth" class="form-control" />
-            <span asp-validation-for="@Model.DateOfBirth" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.Address"></label>
-            <input asp-for="@Model.Address" class="form-control" />
-            <span asp-validation-for="@Model.Address" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.City"></label>
-            <input asp-for="@Model.City" class="form-control" />
-            <span asp-validation-for="@Model.City" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.PostCode"></label>
-            <input asp-for="@Model.PostCode" class="form-control" />
-            <span asp-validation-for="@Model.PostCode" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="@Model.OysterType"></label>
-            <select class="custom-select" asp-for="@Model.OysterType" asp-items="Html.GetEnumSelectList<OysterType>()"></select>
-            <span asp-validation-for="@Model.OysterType" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit application</button>
-        </div>
-    </form>
+    <div class="card-body">
+        <form id="oyster-application" asp-controller="Oysters" asp-action="ApplyForOyster" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="@Model.Forename"></label>
+                <input asp-for="@Model.Forename" class="form-control" />
+                <span asp-validation-for="@Model.Forename" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.Surname"></label>
+                <input asp-for="@Model.Surname" class="form-control" />
+                <span asp-validation-for="@Model.Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.DateOfBirth"></label>
+                <input asp-for="@Model.DateOfBirth" class="form-control" />
+                <span asp-validation-for="@Model.DateOfBirth" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.Address"></label>
+                <input asp-for="@Model.Address" class="form-control" />
+                <span asp-validation-for="@Model.Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.City"></label>
+                <input asp-for="@Model.City" class="form-control" />
+                <span asp-validation-for="@Model.City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.PostCode"></label>
+                <input asp-for="@Model.PostCode" class="form-control" />
+                <span asp-validation-for="@Model.PostCode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.OysterType"></label>
+                <select class="custom-select" asp-for="@Model.OysterType" asp-items="Html.GetEnumSelectList<OysterType>()"></select>
+                <span asp-validation-for="@Model.OysterType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Submit application</button>
+            </div>
+        </form>
+    </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
