--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
@@ -8,7 +8,7 @@
 <div align="center">
     <h1>@ViewData["Title"]</h1>
     <br />
-    <div class="card col-md-4" align="justify">
+    <div class="card col-md-4 shadow-sm" align="justify">
         <div class="card-body">
             <div class="card-title">
                 All fields are required.
