--- a/OysterCard/OysterCard.Website/Views/Oysters/Applications.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Applications.cshtml
@@ -12,9 +12,7 @@
 {
     <h5 class="alert alert-success text-center alert-dismissible fade show" role="alert">
         Success! Your application has been submitted.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </h5>
 }
 @if (Model.Any())
