--- a/OysterCard/OysterCard.Website/Views/Shared/_OysterApplicationPartial.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_OysterApplicationPartial.cshtml
@@ -1,20 +1,21 @@
 ﻿@model OysterCard.Core.DTO.OysterDTO
 
-<div class="card shadow-sm">
+<div class="card shadow-sm my-3" style="min-width: 350px;max-width: 365px">
     <img class="card-img-top card-icon mx-auto mt-2" src="~/res/img/oystericon.png" alt="Oyster">
     <div class="card-body">
         <h5 class="card-title text-center">@Model.Forename @Model.Surname</h5>
-        <p class="card-text text-center">
-            @Model.Address, @Model.City, @Model.PostCode
-        </p>
+        <p class="card-text text-center">@Model.Address, @Model.City, @Model.PostCode</p>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item">Born on @Model.DateOfBirth.ToString("dd/MM/yyyy")</li>
+        <li class="list-group-item">@Model.OysterType Oyster</li>
+        <li class="list-group-item">£@Model.Rate / journey</li>
     </ul>
     <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <!--TODO: Add status badge to Oyster -->
+        <!--TODO: In review, declined -->
+        <p><span class="badge badge-info">In review</span></p>
+        <p class="card-text"><small class="text-muted">Created on @Model.EntityCreated.ToString("dd/MM/yyyy")</small></p>
+        <a href="#" class="card-link">Withdraw application</a>
     </div>
 </div>
