--- a/OysterCard/OysterCard.Website/wwwroot/css/site.css
+++ b/OysterCard/OysterCard.Website/wwwroot/css/site.css
@@ -122,3 +122,8 @@ a.text-dark:hover, a.text-dark:focus {
     width: 30%;
     height: auto;
 }
+
+.badge {
+    font-size: 75%;
+    font-weight: 500;
+}
