--- a/OysterCard/OysterCard.Website/Views/Shared/_OysterApplicationPartial.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Shared/_OysterApplicationPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OysterCard.Core.DTO.OysterDTO
 
-<div class="card shadow-sm my-3" style="min-width: 350px;max-width: 365px">
+<div class="card shadow-sm my-3" style="min-width: 350px;max-width: 350px">
     <img class="card-img-top card-icon mx-auto mt-2" src="~/res/img/oystericon.png" alt="Oyster">
     <div class="card-body">
         <h5 class="card-title text-center">@Model.Forename @Model.Surname</h5>
@@ -13,7 +13,7 @@
     </ul>
     <div class="card-body">
         <!--TODO: Add status badge to Oyster -->
-        <!--TODO: In review, declined -->
+        <!--TODO: Cancelled, In review, Declined -->
         <p><span class="badge badge-info">In review</span></p>
         <p class="card-text"><small class="text-muted">Created on @Model.EntityCreated.ToString("dd/MM/yyyy")</small></p>
         <a href="#" class="card-link">Withdraw application</a>
