--- a/OysterCard/OysterCard.Website/Views/Oysters/Applications.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Applications.cshtml
@@ -27,5 +27,5 @@
 }
 else
 {
-    <h5 class="alert alert-warning text-center" role="alert">You don't have any active Oyster applications</h5>
+    <h5 class="alert alert-warning text-center" role="alert">You don't have any active Oyster applications.</h5>
 }
