Adding some colors.

--- a/OysterCard/OysterCard.Website/Views/Oysters/Dashboard.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Dashboard.cshtml
@@ -30,6 +30,7 @@ else
         </div>
     </div>
     <div class="card shadow-sm">
+        <div class="card-img-trim" style="background-color: #2fa0f0"></div>
         <div class="card-body">
             <a asp-area="" asp-controller="Oysters" asp-action="Apply">
                 <h5 class="card-title">Apply for an Oyster</h5>
@@ -38,6 +39,7 @@ else
         </div>
     </div>
     <div class="card shadow-sm">
+        <div class="card-img-trim" style="background-color: #193095"></div>
         <div class="card-body">
             <a asp-area="" asp-controller="Oysters" asp-action="Applications">
                 <h5 class="card-title">Oyster applications</h5>
