--- a/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
+++ b/OysterCard/OysterCard.Website/Areas/Identity/Pages/Account/Signup.cshtml
@@ -8,7 +8,8 @@
 <div align="center">
     <h1>@ViewData["Title"]</h1>
     <br />
-    <div class="card col-md-4 shadow-sm" align="justify">
+    <div class="card shadow-sm" align="justify" style="max-width: 375px">
+        <div class="card-img-trim" style="background-color: #2fa0f0"></div>
         <div class="card-body">
             <div class="card-title">
                 All fields are required.
