--- a/OysterCard/OysterCard.Website/wwwroot/css/site.css
+++ b/OysterCard/OysterCard.Website/wwwroot/css/site.css
@@ -118,9 +118,15 @@ a.text-dark:hover, a.text-dark:focus {
             box-shadow: none;
         }
 
-.card-icon {
-    width: 30%;
-    height: auto;
+.card-img-top {
+    width: 100%;
+    height: 20px;
+    object-fit: cover;
+}
+
+.card-img-trim {
+    height: 10px;
+    object-fit: cover;
 }
 
 .badge {
