--- a/OysterCard/OysterCard.Website/wwwroot/css/site.css
+++ b/OysterCard/OysterCard.Website/wwwroot/css/site.css
@@ -120,11 +120,12 @@ a.text-dark:hover, a.text-dark:focus {
 
 .card-img-top {
     width: 100%;
-    height: 20px;
+    height: 10px;
     object-fit: cover;
 }
 
 .card-img-trim {
+    width: 100%;
     height: 10px;
     object-fit: cover;
 }
