--- a/OysterCard/OysterCard.Website/Views/Oysters/Applications.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Applications.cshtml
@@ -36,3 +36,6 @@ else
 {
     <h5 class="alert alert-warning text-center" role="alert">You don't have any active Oyster applications.</h5>
 }
+<div>
+    <a asp-area="" asp-controller="Oysters" asp-action="Index">Back to dashboard</a>
+</div>
