--- a/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
@@ -59,6 +59,9 @@
         </form>
     </div>
 </div>
+<div class="mt-3">
+    <a asp-area="" asp-controller="Oysters" asp-action="Index">Back to dashboard</a>
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
