--- a/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
+++ b/OysterCard/OysterCard.Website/Views/Oysters/Apply.cshtml
@@ -1,5 +1,4 @@
-﻿@using OysterCard.Core.Enums
-@model OysterCard.Core.ViewModels.OysterApplicationVM
+﻿@model OysterCard.Core.ViewModels.OysterApplicationVM
 
 @{
     ViewData["Title"] = "Apply for an Oyster";
